# meower

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
auth_proxy/: Cargo.toml
auth_proxy/src/: assets.rs  auth.rs  config.rs  login.rs  main.rs  proxy.rs  validator.rs
auth_proxy/src/layers/: mod.rs  session.rs
auth_proxy/src/pages/: login.rs  mod.rs  signup.rs
auth_proxy/templates/: login.html  signup.html
common/: .env.example  Cargo.toml
common/assets/scss/: style.scss  theme.scss  ui.scss
common/locale/en/: common.json
common/src/: config.rs  i18n.rs  lib.rs  validator.rs
dev/auth_proxy/: Cargo.toml
dev/auth_proxy/src/: i18n.rs  main.rs
dev/auth_proxy/src/pages/: login.rs  mod.rs
dev/system/api_gw/core/: Cargo.toml
dev/system/api_gw/core/src/: config.rs  forward.rs  main.rs  state.rs
dev/system/api_gw/core/src/layers/: cors.rs  cors_ext.rs  mod.rs  protected.rs
dev/system/app/core/: Cargo.toml
dev/system/app/core/src/: config.rs  main.rs
dev/system/app/core/src/handlers/: auth_callback.rs  index.rs  mod.rs
dev/system/app/core/src/layers/: mod.rs  protected.rs
dev/system/app/spa/: Cargo.toml  Trunk.toml  index.html
dev/system/app/spa/graphql/account/: accounts.graphql  get_account_list.graphql  get_my_accounts.graphql
dev/system/app/spa/graphql/mutation/: account.graphql
dev/system/app/spa/graphql/query/: account.graphql
dev/system/app/spa/locales/common/: ja.yml
dev/system/app/spa/public/: style.css
dev/system/app/spa/src/: config.rs  main.rs  root.rs  routes.rs  state.rs
dev/system/app/spa/src/apis/: mod.rs  mypage.rs
dev/system/app/spa/src/components/: graphql_error_alert.rs  mod.rs  root.rs  text_field.rs
dev/system/app/spa/src/layouts/: aside.rs  mod.rs
dev/system/app/spa/src/pages/: home.rs  mod.rs  notfound.rs
dev/system/app/spa/src/themes/: colors.rs  mod.rs
dev/system/app/spa/src/types/: mod.rs  selected_account.rs  upload_file.rs
dev/system/app/spa/src/utils/: dom.rs  mod.rs  props.rs  request.rs  request_graphql.rs  timeout.rs
dev/system/app/spa/src/variables/: colors.rs
dev/system/auth/core/: Cargo.toml
dev/system/auth/core/locales/common/: ja.yml
dev/system/auth/core/src/: config.rs  main.rs
dev/system/auth/core/src/apis/: mod.rs
dev/system/auth/core/src/handlers/: bad_request.rs  (+10 more)
dev/system/auth/core/templates/: bad_request.html  forgot_password.html  forgot_password_success.html  login.html  resend_verify_code.html  reset_password.html  reset_password_success.html  signup.html  signup_success.html  verify_code.html
dev/system/auth/entity/: Cargo.toml
dev/system/auth/install/: Cargo.toml
dev/system/auth/install/src/: install_initial_data.rs
dev/system/auth/shared/: Cargo.toml
dev/system/auth/shared/src/: lib.rs
dev/system/auth_server/: Cargo.toml
dev/system/auth_server/src/: assets.rs  main.rs  proxy.rs
dev/system/auth_server/src/apis/: mod.rs  request_token.rs
dev/system/auth_server/src/layers/: auth.rs  i18n.rs  mod.rs  protected.rs
dev/system/auth_server/src/pages/: create_account.rs  delete_temporary_user.rs  forgot_password.rs  forgot_password_success.rs  login.rs  mod.rs  not_found.rs  resend_verify_code.rs  reset_password.rs  reset_password_success.rs  signup.rs  signup_success.rs  verify_code.rs
dev/system/auth_server/src/utils/: email.rs  mod.rs
dev/system/auth_server/templates/: create_account.html  forgot_password.html  login.html  not_found.html  resend_verify_code.html  reset_password.html  reset_password_success.html  send_reset_password_mail.html  signup.html  signup_success.html  verify_code.html
dev/system/auth_server/templates/common/: base.html  footer.html  header.html
dev/system/common/entity_ext/: Cargo.toml
dev/system/common/entity_ext/src/: validate.rs
dev/system/common/utility/: Cargo.toml
dev/system/common/utility/src/: lib.rs
dev/system/core/: Cargo.toml
dev/system/core/src/: auth.rs  config.rs  file_loader.rs  i18n.rs  lib.rs  mailer.rs  validator.rs
dev/system/database/entity/: Cargo.toml
dev/system/database/entity/src/: lib.rs
dev/system/database/install/: Cargo.toml
dev/system/database/install/src/: install_test_data.rs  lib.rs
dev/system/datastore/install/: Cargo.toml
dev/system/datastore/install/src/: install_master.rs  install_test_data.rs
dev/system/layer/auth/: Cargo.toml
dev/system/layer/auth/src/: config.rs  main.rs
dev/system/layer/auth/templates/: forgot_password.html  forgot_password_success.html  login.html  resend_verify_code.html  reset_password.html  reset_password_success.html  signup.html  signup_success.html  verify_code.html
dev/system/service/api/: Cargo.toml
dev/system/service/api/src/: config.rs  main.rs
dev/system/service/backend/: Cargo.toml
dev/system/service/backend/src/: main.rs
dev/system/service/frontend/: Cargo.toml
dev/system/service/frontend/src/: main.rs  route.rs  routes.rs
dev/system/service/schema/: Cargo.toml
dev/system/service/schema/src/: lib.rs
dev/system/service/spa/: Cargo.toml  Trunk.toml  index.html
dev/system/service/spa/locales/: ja.yml
dev/system/service/spa/public/: style.css  ui.css
dev/system/service/spa/src/: main.rs  routes.rs  state.rs
dev/system/service/spa_server/: Cargo.toml
dev/system/service/spa_server/public/: style-141bdf7c76ff9f19.css
dev/system/service/spa_server/src/: config.rs  main.rs  state.rs
dev/system/util/handler/: Cargo.toml
dev/system/util/handler/src/: lib.rs  login_callback.rs
dev/system/util/layer/: Cargo.toml
dev/system/util/layer/src/: protected.rs
dev/system/util/validator/: Cargo.toml
dev/system/util/validator/locales/: ja.yml
dev/system/util/validator/location/: ja.yml
dev/system/util/validator/src/: lib.rs
dev2/system/auth/core/: Cargo.toml
install/: Cargo.toml
install/src/: lib.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20231114_041811_create_user_table.rs  main.rs
migration/src/install/: install_test_data.rs
migration/src/migration/: m20231114_041811_create_user_table.rs  m20231127_041811_create_user_table.rs  mod.rs
(+1157 files in other folders)
