[package]
name = "meower_auth_proxy"
version = "0.1.0"
edition = "2021"


[dependencies]
meower_entity = { version = "0.1.0", path = "../entity" }
argon2 = { version = "0.5.2", features = ["password-hash"] }
askama = "0.12.1"
axum = "0.6.20"
axum-extra = { version = "0.8.0", features = ["cookie"] }
chrono = "0.4.31"
hyper = { version = "0.14.27", features = ["client"] }
jsonwebtoken = "9.1.0"
serde = "1.0.192"
time = "0.3.30"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tower-sessions = { version = "0.5.1", features = ["redis-store"] }
tracing = "0.1.40"
uuid = "1.5.0"
