[package]
name = "meower_utility"
version = "0.1.0"
edition = "2021"


[dependencies]
regex = "1.10.2"
argon2 = { version = "0.5.2", features = ["password-hash"] }
jsonwebtoken = "9.1.0"
chrono = "0.4.31"
serde = "1.0.193"
uuid = { version = "1.6.1", features = ["v4"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
toml = "0.8.8"
globwalk = "0.8.1"
