[package]
name = "meower_install"
version = "0.1.0"
edition = "2021"


[dependencies]
meower_entity = { version = "0.1.0", path = "../entity" }
tokio = { version = "1.34.0", features = ["full"] }
sea-orm = { version = "0.12.6", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres"
]}

[[bin]]
name = "install_test_data"
path = "src/bin/install_test_data.rs"
