[package]
name = "meower_migration"
version = "0.1.0"
edition = "2021"
publish = false


[lib]
name = "meower_migration"
path = "src/lib.rs"


[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
sea-orm-migration = { version = "0.12.6", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres"
]}
