[package]
name = "meower_auth_server"
version = "0.1.0"
edition = "2021"


[dependencies]
meower_core = { version = "0.1.0", path = "../core" }
meower_entity = { version = "0.1.0", path = "../datastore/entity" }
askama = "0.12.1"
axum = "0.6.20"
axum-extra = { version = "0.8.0", features = ["cookie"] }
hyper = { version = "0.14.27", features = ["client"] }
serde = "1.0.192"
time = "0.3.30"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
sea-orm = { version = "0.12.6", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres"
]}
accept-language = "3.1.0"
