[package]
name = "meower_core"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.6.20"
axum-extra = { version = "0.8.0", features = ["cookie"] }
chrono = "0.4.31"
regex = "1.10.2"
jsonwebtoken = "9.1.0"
once_cell = "1.18.0"
serde = "1.0.193"
uuid = { version = "1.6.1", features = ["v4"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
time = "0.3.30"
toml = "0.8.8"
globwalk = "0.8.1"
lettre = { version = "0.11.2", features = [
    "builder",
    "tokio1",
    "tokio1-native-tls",
    "smtp-transport",
]}
