[package]
name = "meower_api_gw"
version = "0.1.0"
edition = "2021"
authors = ["ichigo-dev <dev.honda.ichigo@gmail.com>"]
description = "Meower API gateway"
license = "MIT"
documentation = ""
repository = "https://github.com/ichigo-dev/meower"


[dependencies]
meower_shared = { version = "0.1.0", path = "../../common/shared" }
axum = "0.7.2"
jsonwebtoken = "9.2.0"
reqwest = "0.11.23"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
serde = "1.0.195"
serde_json = "1.0.111"
