[package]
name = "meower_app"
version = "0.1.0"
edition = "2021"
authors = ["ichigo-dev <dev.honda.ichigo@gmail.com>"]
description = "Meower application server"
license = "MIT"
documentation = ""
repository = "https://github.com/ichigo-dev/meower"


[dependencies]
meower_app_entity = { version = "0.1.0", path = "../entity" }
meower_entity_ext = { version = "0.1.0", path = "../../common/entity_ext" }
axum = "0.7.2"
sea-orm = { version = "0.12.6", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres"
]}
tokio = { version = "1.34.0", features = ["full"] }
serde = "1.0.195"
reqwest = "0.11.23"
serde_json = "1.0.111"
