[package]
name = "meower_app_spa"
version = "0.1.0"
edition = "2021"
authors = ["ichigo-dev <dev.honda.ichigo@gmail.com>"]
description = "SPA frontend for Meower"
license = "MIT"
documentation = ""
repository = "https://github.com/ichigo-dev/meower"


[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
graphql_client = "0.13.0"
log = "0.4.17"
reqwest = { version = "0.11.23", features = ["json"] }
rust-i18n = "2.3.0"
serde = "1.0.192"
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.108"
sycamore = { version = "0.8.2", features = ["suspense"] }
sycamore-router = "0.8.0"
thiserror = "1.0.51"
wasm-bindgen = { version = "0.2.89", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.39"
web-sys = { version = "0.3.66", features = [
    "Window",
    "Navigator",
]}
