[package]
name = "meower_auth"
version = "0.1.0"
edition = "2021"
authors = ["ichigo-dev <dev.honda.ichigo@gmail.com>"]
description = "Meower authentication server"
license = "MIT"
documentation = ""
repository = "https://github.com/ichigo-dev/meower"


[dependencies]
meower_auth_entity = { version = "0.1.0", path = "../entity" }
meower_entity_ext = { version = "0.1.0", path = "../../common/entity_ext" }
accept-language = "3.1.0"
askama = "0.12.1"
axum = "0.7.2"
rust-i18n = "2.3.0"
sea-orm = { version = "0.12.6", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres"
]}
serde = "1.0.192"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
