[package]
name = "meower_auth"
version = "0.1.0"
edition = "2021"
authors = ["ichigo-dev <dev.honda.ichigo@gmail.com>"]
description = "Meower authentication server"
license = "MIT"
documentation = ""
repository = "https://github.com/ichigo-dev/meower"


[dependencies]
meower_auth_entity = { version = "0.1.0", path = "../entity" }
meower_auth_shared = { version = "0.1.0", path = "../shared" }
meower_entity_ext = { version = "0.1.0", path = "../../common/entity_ext" }
meower_utility = { version = "0.1.0", path = "../../common/utility" }
accept-language = "3.1.0"
askama = "0.12.1"
axum = "0.7.2"
axum-extra = { version = "0.9.2", features = ["cookie"] }
chrono = "0.4.31"
jsonwebtoken = { version = "9.2.0", features = ["use_pem"] }
lettre = { version = "0.11.2", features = [
    "builder",
    "tokio1",
    "tokio1-native-tls",
    "smtp-transport",
]}
rust-i18n = "2.3.0"
sea-orm = { version = "0.12.6", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres"
]}
serde = "1.0.192"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
time = "0.3.31"
