[package]
name = "meower_auth_install"
version = "0.1.0"
edition = "2021"
authors = ["ichigo-dev <dev.honda.ichigo@gmail.com>"]
description = "Meower authentication server data installer"
license = "MIT"
documentation = ""
repository = "https://github.com/ichigo-dev/meower"


[dependencies]
meower_auth_entity = { version = "0.1.0", path = "../entity" }
meower_entity_ext = { version = "0.1.0", path = "../../common/entity_ext" }
tokio = { version = "1.34.0", features = ["full"] }
sea-orm-migration = { version = "0.12.6", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres"
]}
sea-orm = { version = "0.12.6", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres"
]}


[[bin]]
name = "install_initial_data"
path = "src/install_initial_data.rs"
