[package]
name = "meower_utility"
version = "0.1.0"
edition = "2021"
authors = ["ichigo-dev <dev.honda.ichigo@gmail.com>"]
description = "Utility"
license = "MIT"
documentation = ""
repository = "https://github.com/ichigo-dev/meower"


[dependencies]
argon2 = { version = "0.5.2", features = ["password-hash"] }
rand = "0.8.5"
