[package]
name = "meower_entity"
version = "0.1.0"
edition = "2021"
authors = ["ichigo-dev <dev.honda.ichigo@gmail.com>"]
description = "Definition of database table entities"
license = "MIT"
documentation = ""
repository = "https://github.com/ichigo-dev/meower"


[dependencies]
meower_validator = { version = "0.1.0", path = "../../util/validator" }
async-trait = "0.1.74"
argon2 = { version = "0.5.2", features = ["password-hash"] }
chrono = "0.4.31"
rand = "0.8.5"
sea-orm = { version = "0.12.6" }
sea-query = "0.30.3"
thiserror = "1.0.51"
