[package]
name = "meower_install"
version = "0.1.0"
edition = "2021"


[dependencies]
meower_migration = { version = "0.1.0", path = "../migration" }
meower_core = { version = "0.1.0", path = "../../core" }
meower_entity = { version = "0.1.0", path = "../entity" }
tokio = { version = "1.34.0", features = ["full"] }
sea-orm-migration = { version = "0.12.6", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres"
]}
sea-orm = { version = "0.12.6", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres"
]}


[[bin]]
name = "install_master"
path = "src/install_master.rs"

[[bin]]
name = "install_test_data"
path = "src/install_test_data.rs"
