[package]
name = "meower_auth"
version = "0.1.0"
edition = "2021"
authors = ["ichigo-dev <dev.honda.ichigo@gmail.com>"]
description = "Meower authentication related modules"
license = "MIT"
documentation = ""
repository = "https://github.com/ichigo-dev/meower"


[dependencies]
meower_entity = { version = "0.1.0", path = "../../database/entity" }
meower_type = { version = "0.1.0", path = "../../util/type" }
accept-language = "3.1.0"
askama = "0.12.1"
axum = "0.7.2"
axum-extra = { version = "0.9.0", features = ["cookie"] }
chrono = "0.4.31"
hyper = { version = "1.0.1", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["client-legacy"] }
jsonwebtoken = "9.1.0"
lettre = { version = "0.11.2", features = [
    "builder",
    "tokio1",
    "tokio1-native-tls",
    "smtp-transport",
]}
rust-i18n = "2.3.0"
sea-orm = { version = "0.12.6", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres"
]}
serde = "1.0.192"
serde_json = "1.0.108"
time = "0.3.31"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
