[package]
name = "meower_backend"
version = "0.1.0"
edition = "2021"


[dependencies]
meower_core = { version = "0.1.0", path = "../../core" }
meower_entity = { version = "0.1.0", path = "../../datastore/entity" }
axum = "0.6.20"
axum-extra = { version = "0.8.0", features = ["cookie"] }
serde = "1.0.192"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
sea-orm = { version = "0.12.6", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres"
]}
accept-language = "3.1.0"
tower-http = { version = "0.4.0", features = ["cors"] }
