[package]
name = "meower_spa_server"
version = "0.1.0"
edition = "2021"
authors = ["ichigo-dev <dev.honda.ichigo@gmail.com>"]
description = "SPA delivery server for Meower"
license = "MIT"
documentation = ""
repository = "https://github.com/ichigo-dev/meower"


[dependencies]
meower_layer = { version = "0.1.0", path = "../../util/layer" }
meower_type = { version = "0.1.0", path = "../../util/type" }
axum = "0.7.2"
axum-extra = { version = "0.9.0", features = ["cookie"] }
jsonwebtoken = "9.1.0"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
