[package]
name = "meower_handler"
version = "0.1.0"
edition = "2021"
authors = ["ichigo-dev <dev.honda.ichigo@gmail.com>"]
description = "Common handlers"
license = "MIT"
documentation = ""
repository = "https://github.com/ichigo-dev/meower"


[dependencies]
meower_type = { path = "../type" }
axum = "0.7.2"
axum-extra = { version = "0.9.0", features = ["cookie"] }
futures-util = "0.3.30"
hyper = "1.1.0"
hyper-util = { version = "0.1.2", features = ["client-legacy"] }
http = "1.0.0"
jsonwebtoken = "9.1.0"
tower = "0.4.13"
tower-layer = "0.3.2"
serde = "1.0.195"
