[package]
name = "meower_layer"
version = "0.1.0"
edition = "2021"
authors = ["ichigo-dev <dev.honda.ichigo@gmail.com>"]
description = "Common layers"
license = "MIT"
documentation = ""
repository = "https://github.com/ichigo-dev/meower"


[dependencies]
meower_type = { path = "../type" }
axum = "0.7.2"
axum-extra = { version = "0.9.0", features = ["cookie"] }
jsonwebtoken = "9.1.0"
http = "1.0.0"
tower = "0.4.13"
tower-layer = "0.3.2"
