[package]
name = "meower_validator"
version = "0.1.0"
edition = "2021"
authors = ["ichigo-dev <dev.honda.ichigo@gmail.com>"]
description = "Validation library for Meower"
license = "MIT"
documentation = ""
repository = "https://github.com/ichigo-dev/meower"


[dependencies]
regex = "1.10.2"
rust-i18n = "2.3.0"
thiserror = "1.0.51"
