[package]
name = "meower_auth"
version = "0.1.0"
edition = "2021"
authors = ["ichigo-dev <dev.honda.ichigo@gmail.com>"]
description = "Meower authentication server"
license = "MIT"
documentation = ""
repository = "https://github.com/ichigo-dev/meower"


[dependencies]
meower_auth_entity = { version = "0.1.0", path = "../entity" }
meower_entity_ext = { version = "0.1.0", path = "../../common/entity_ext" }
